2010-03-18 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Release 2.6.7
	
2010-03-18 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Manual is optimized

2010-03-17 Ivan Kartolo <ivan.kartolo@dkd.de>
	* bug #6882(f): Importer: upload csv failed because the permission is wrong calculated
	
2010-03-12 Ivan Kartolo <ivan.kartolo@dkd.de>
	* bug #6842(f): configuration module won't show up for new user.

2010-03-10 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Release 2.6.6

2010-03-10 Ivan Kartolo <ivan.kartolo@dkd.de>
	* bug #13648(b): empty bullet list in plaintext 
	* bug #13280(b): SysFolder list in the importer module respects the user permission
	* bug #6546(f):	fixed_lgd will be deprecated soon, changed it with fixed_lgd_cs

2010-03-09 Ivan Kartolo <ivan.kartolo@dkd.de>
	* feature #3600: code cleanup. Thanks to Benni Mack
	* bug #5303: fix bug edit link in statistic

2010-03-02 Ivan Kartolo <ivan.kartolo@dkd.de>
	* bug #13349(b): fix the next and back button positioning in IE7
	* bug #6515(f): fix typo
	
2010-02-22 Ivan kartolo <ivan.kartolo@dkd.de>
	* bug #5772(f): removed getListOfBackendModules, since it will be deprecated soon, and direct mail doesn't need it anyway
	* bug: fixed pointer (issue with php 5.3)
	 
2010-01-13 Ivan Kartolo <ivan.kartolo@dkd.de>
	* bug #5733(f): recipRow as hook parameter
	
2009-12-13 Ivan Kartolo <ivan.kartolo@dkd.de>
	* bug #5342(f): fixed uninitialized array
	* bug #5477(f): quoted admin email
	* bug #5698(f): fixed link to edit page
	* bug #5687(f): copied substituteMarkerArray from t3lib_parsehtml for T3 < 4.2.x 

2009-12-01 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Release 2.6.5
	
2009-11-26 Ivan Kartolo <ivan.kartolo@dkd.de>
	* bug: fixed XSS vulnerabilities 

2009-11-11 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Release 2.6.4

2009-11-10 Ivan Kartolo <ivan.kartolo@dkd.de>
	* bug #5140(f): new layout of statistic module
	* bug #5186(f): register autoload for TYPO3 4.3
	* bug #5304(f): added title param to link of the newsletter in statistic module 
