@@ -1,3 +1,6 @@
+2010-04-27 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* Bug #6795: change deprecated split-function in PHP 5.3
+
 2010-03-18 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* Release 2.6.7
 	
